# noterm

./: .gitmodules  README.md  index.html  package-lock.json  package.json  webui_index.html
scripts/: webui.config.json
src/: App.vue  webui-ext.ts
src-cpp/: CMakeLists.txt  lib.cpp  main.cpp  win32.cpp  win32.hpp
src/Components/: TabBar.vue  TerminalContainer.vue
